# analysis-kuromoji

./: Cargo.toml  README.md
src/: baseform.rs  completion.rs  lib.rs  number.rs  part_of_speech.rs  readingform.rs  register.rs  stemmer.rs  stop.rs  tokenizer.rs
tests/: kuromoji_comprehensive.rs
